--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "it_look",
-  "homepage": "https://jowissa.github.io",
+  "homepage": "https://jowissa.github.io/funiro_landing",
   "private": true,
   "version": "0.0.0",
   "type": "module",
